# glados

./: .classpath  .gitignore  .project  basics.launch  robot.urdf
.svn/: wc.db
Chassis/: .project
Chassis/src/Chassis/: RobotPositionController.java
GUIHelpers/: GUIHelpers.java
MotorControl/: .project  dataLog1.txt  dataLog6.txt
MotorControl/plots/: FFVel_Loaded.ps  FFVel_Unloaded_plot.ps  plot.ps
MotorControl/src/MotorControl/: #GraphPanel.java#  MotorControl.java  RobotVelocityController.java
lab4/launch/: servo.launch
lab4/src/VisualServo/: BlobTracking.java  VisionGUI.java  VisualServo.java
lab4/src/util/: fit.py
lab5/launch/: sonarGUI.launch  sonar_test.launch
lab5/src/LocalNavigation/: FSM.java  LeastSquareLine.java  LocalNavigation.java  Mat.java  SonarPoints.java  g.java
lab6/launch/: mapGUI.launch  nav.launch
lab6/src/GlobalNavigation/: AStar.java  CSpace.java  GUIHelpers.java  GlobalNavigation.java  GraphNode.java  PolygonMap.java  PolygonObstacle.java  Predicate.java  Vector2D.java  VisibilityGraph.java  WaypointNavigator.java  WaypointNode.java  g.java
lab7/launch/: armGUI.launch  nav.launch  part4.launch
lab7/src/Grasping/: ArmControl.java  FSM.java  Grasping.java  Image.java  LabSM.java  Publishers.java  Servo.java  Subscribers.java  VisualServo.java  WaypointNav.java  g.java
src/joy_teleop/: CMakeLists.txt  package.xml
src/joy_teleop/launch/: teleop.launch
src/joy_teleop/src/: teleop_cmd_vel.cpp
src/orc/: CMakeLists.txt  package.xml  robot.urdf
src/orc/include/orc/: joints.h  odometry.h  pid.h  status.h  touch.h
src/orc/launch/: basics.launch  config.launch  mapping.launch  mapping2.launch  robot_brain.launch
src/orc/msg/: JointSet.msg  NearestBlock.msg  TouchState.msg
src/orc/scripts/: PickupandDrop.py  door_service.py  explorer.py  follow_wall.py  local_collision.py  object-detector.py  obstacle.py  obstacles.h  pickup_and_drop.py  rrt.cpp  rrt.h  rrt_node.cpp  state_machine.py  state_machine_simple.py  visual-servo.py  waypoint.py  waypoint_go.py
src/orc/src/: joints.cpp  main.cpp  odometry.cpp  pcl_to_laserscan.cpp  pid.cpp  rrt.cpp  simple_mapper.cpp  status.cpp  touch.cpp  uorc.c  varray.c
src/orc/srv/: Collides.srv  Waypoint.srv
src/orc_pub/: CMakeLists.txt  package.xml
src/orc_pub/include/orc_pub/: odometry.h  status.h
src/orc_pub/src/: main.cpp  odometry.cpp  status.cpp
src/orc_sub/: CMakeLists.txt  package.xml
src/orc_utils/: CMakeLists.txt  package.xml  udp_util.c  uorc.c  varray.c
src/orc_utils/include/orc_utils/: uorc.h
test_code/: build.sh  display.py  map.py  particle_filter.cpp  particle_filter.h  ransac.h  ransac_lines.cpp  ransac_lines.h  simulator.cpp  test_ransac.cpp  test_segments.cpp  test_simulator.cpp
