<?xml version="1.0"?>
<package>
  <name>orc</name>
  <version>0.0.1</version>
  <description>Talks to the OrcBoard</description>

  <maintainer email="rssworkstation@gmail.com">GLaDOS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generations</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
